<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Putokazio</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="group1">Group1</string>
    <string name="group2">Group2</string>
    <string name="group3">Group3</string>
    <string name="group4">Group4</string>
    <string name="group5">Group5</string>
    <string name="group6">Group6</string>
    <string-array name="group1">
        <item>item1</item>
    </string-array>
    <string-array name="group2">
        <item>item1</item>
        <item>item2</item>
    </string-array>
    <string-array name="group3">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>

    </string-array>
    <string-array name="group4">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="group5">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
    </string-array>
    <string-array name="group6">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
        <item>item6</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="todo">TODO</string>
    <string name="podesavanje">U vreme pisanja ove lekcije, Android Studio 4 je bio aktuelan. Da bismo preuzeli Android Studio 4 možemo otići na sledeći link
    <a href="https://developer.android.com/studio/">Android Studio</a> </string>
    <string name="covid">SARS-CoV-2 virus je sada endemski, cirkuliše na nivou na kome neće moći da se iskoreni. Svi koji nemaju otpornost će ga dobiti pre ili kasnije.
Terapije koje su lekari i naučnici razvili od marta do danas, krvavim radom, su znatno smanjile smrtnost. Ali bolnice su i dalje pune. Redovi su ispred vrata klinika i bolnica ceo dan i noć. Čak i sa tom boljom terapijom, ljudi umiru na sve strane. Ne morate nikome da verujete na reč o tome, dovoljno je da izbrojite smrtovnice ili da se prošetate ispred kovid ambulanti i vidite redove svojim očima.Naučne studije pokazuju da veliki broj ljudi, možda i do 20% onih koji su imali značajne simptome, preživljava bolest, ali sa oštećenjima pluća, srca, bubrega, vaskularnog sistema, a povremeno i mozga. Ovo nije prvi put da smo tako nešto videli: sadašnja epidemija je po mnogim parametrima veoma slična epidemiji Španskog gripa, koji je pogodio svet 1918–1920. Ljudi sa sličnim posledicama kakve vidimo danas su zatrpavali neurološke, srčane, i plućne klinike sve do 1950-tih. Možemo da očekujemo da će oni koji preleže virus u proseku živeti kraće, biti bolesniji, ranije u životu razvijati razne hronične bolesti, i da ćemo generalno imati više invalida tokom sledećih par decenija.
Ako ste do sada bili zdravi, vaš izbor je sledeći: možete uzeti vakcinu, i rizikovati njene nuspojave. Ili možete čekati da dobijete virus, i rizikovati neželjene efekte infekcije. Nema opcije u kojoj nema rizika. Možete samo da birate koji rizik hoćete. Trenutno se na tržištu nalaze, ili mu se približavaju, sledeće vakcine: RNK VAKCINE,ADENOVIRUSNE VAKCINE,KLASIČNE VAKCINE. Za sada, sigurnost nije problem ni za jednu koja je ozbiljan kandidat. Sve su neuporedivo bolje nego dobijanje virusa. Efikasnost se razlikuje — Pfizer-BioNTech i Moderna za sada vode na tom planu, ali videćemo kako stvari izgledaju kako se više informacija skupi.
        <a href="https://medium.com/science-in-serbia-nauka-u-srbiji/kraj-2020-%C5%A1ta-re%C4%87i-koju-vakcinu-odabrati-3bfd09bffd34">Izvor</a>

    </string>
    <string name="literatura">Izvori:</string>
    <string name="wikipedia"><a href="https://www.wikipedia.org/">Wikipedia</a></string>
    <string name="head_first_kotlin"><a href="https://www.oreilly.com/library/view/head-first-kotlin/9781491996683/">Head First Kotlin</a></string>
    <string name="learn_android_studio_4"><a href="https://www.apress.com/gp/book/9781484259368">Learn Android Studio 4</a></string>
    <string name="red_hat_enterprise_linux_6_administration"><a href="https://www.sandervanvugt.com/book-red-hat-enterprise-linux-6-administration/">Red Hat Enterprise Linux 6 Administration</a></string>
    <string name="pro_git_2nd_edition"><a href="https://git-scm.com/book/sr/v2">Pro Git 2nd Edition</a></string>


</resources>